--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
         <div class="background6"></div>
         <img class="_11983249-png" src="imagens/_11983249-png0.png" />
-        <div class="heading-6-cargo-ou-func-o">Cargo ou Funcção</div>
+        <div class="heading-6-cargo-ou-func-o">Cargo ou Função</div>
         <div
           class="defina-a-vaga-de-acordo-com-as-exig-ncias-do-cargo-a-ser-preenchido-e-a-necessidade-espec-fica-do-momento-em-que-a-empresa-est"
         >
@@ -609,7 +609,7 @@
             </span>
           </span>
         </div>
-        <img class="heading-219" src="heading-218.svg" />
+        <img class="heading-219" src="imagens/heading-218.svg" />
       </div>
     </div>
     <div class="background15">
@@ -657,7 +657,7 @@
     <div
       class="background16"
       style="
-        background: url(background14.png) center;
+        background: url(imagens/background14.png) center;
         background-size: cover;
         background-repeat: no-repeat;
       "
