--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-      <img class="_11989206-png" src="imagens/_11989206-png0.png" />
+      <img class="_11989206-png" src="imagens/_11989206png0.png" />
     </div>
     <div class="background3">
       <div class="container2">
