--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
           Mas... o que são RPA e RPR?
         </div>
         <div class="background-shadow7"></div>
-        <img class="_11999927-png" src="imagens/_11999927-png0.png" />
+        <img class="_11999927-png" src="imagens/_11999927.png" />
         <div
           class="o-rpa-uma-ferramenta-de-an-lise-de-perfil-comportamental-que-tem-como-base-um-m-todo-estat-stico-e-lingu-stico-de-pesquisa-por"
         >
